// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parse foo::bar();  1`] = `
[
  {
    "calls": [
      {
        "end": 20,
        "kind": "call",
        "name": "foo::bar",
        "start": 12,
      },
    ],
    "end": 25,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 7,
      "kind": "fnName",
      "name": "main",
      "start": 3,
    },
    "start": 0,
    "typeRefs": [],
  },
]
`;

exports[`parse let x: foo::bar;  1`] = `
[
  {
    "calls": [],
    "end": 34,
    "kind": "fn",
    "name": "main",
    "nameElem": {
      "end": 7,
      "kind": "fnName",
      "name": "main",
      "start": 3,
    },
    "start": 0,
    "typeRefs": [
      {
        "end": 27,
        "kind": "typeRef",
        "name": "foo::bar",
        "start": 19,
      },
    ],
  },
]
`;

exports[`parse unicode ident 1`] = `
"module
  text '
  '
  fn Δέλτα()
    text 'fn '
    decl %Δέλτα
    text '(){}'
  text ' 
  '
  fn réflexion()
    text 'fn '
    decl %réflexion
    text '(){}'
  text ' 
  '
  fn Кызыл()
    text 'fn '
    decl %Кызыл
    text '(){}'
  text ' 
  '
  fn 𐰓𐰏𐰇()
    text 'fn '
    decl %𐰓𐰏𐰇
    text '(){}'
  text ' 
  '
  fn 朝焼け()
    text 'fn '
    decl %朝焼け
    text '(){}'
  text '
  '
  fn سلام()
    text 'fn '
    decl %سلام
    text '(){}'
  text ' 
  '
  fn 검정()
    text 'fn '
    decl %검정
    text '(){}'
  text ' 
  '
  fn שָׁלוֹם()
    text 'fn '
    decl %שָׁלוֹם
    text '(){}'
  text '
  '
  fn गुलाबी()
    text 'fn '
    decl %गुलाबी
    text '(){}'
  text '
  '
  fn փիրուզ()
    text 'fn '
    decl %փիրուզ
    text '(){}'
  text '
  '"
`;
